manifest/templates/ingress/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: backend
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
    - host: api.devops.firasbennacib.com
      http:
        paths:
          - path: /springMVC
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8088
